--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
 </head>
 
 <body>
-
+    <header></header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
