--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <header class="nc-bg-dark">
         <div class="container-fluid py-2">
-            <div class="row  justify-content-end ">
-                <img src="img/sony_logo.svg" class="nc-logo-width" alt="logo sony">
+            <div class="row justify-content-end ">
+                <img src="img/sony_logo.svg" style="max-width: 90px;" alt="logo sony">
             </div>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
@@ -138,7 +138,22 @@
         </nav>
     </header>
     <main>
-        <section></section>
+        <section id="jumbotron">
+            <div class="container text-light">
+                <div class="row">
+                    <div class="col-12 col-lg-5 nc-m-12">
+                        <img class="img-fluid w-50 pb-4" src="img/returnal-hero-banner-logo.png" alt="returnal banner">
+                        <h1 class="pb-4">Rompi il cerchio</h1>
+                        <p>
+                            Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo
+                            esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
+                        </p>
+                        <button type="button" class="btn nc-orange-btn text-light rounded-pill mb-4">Acquista
+                            ora</button>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
