completed card section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,35 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section class="pt-4 pb-5">
+            <!-- Returnal/Ratchet-clank Cards -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-sm-4 col-xl-2 py-2">
+                        <img class="img-fluid rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2 py-2">
+                        <img class="img-fluid rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet and clank">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2 py-2">
+                        <img class="img-fluid rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2 py-2">
+                        <img class="img-fluid rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet and clank">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2 py-2">
+                        <img class="img-fluid rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2 py-2">
+                        <img class="img-fluid rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet and clank">
+                    </div>
+
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
