--- a/index.html
+++ b/index.html
@@ -179,11 +179,21 @@
                         <img class="img-fluid rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
                             alt="ratchet and clank">
                     </div>
-
                 </div>
             </div>
         </section>
-        <section></section>
+        <section style="min-height: 800px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h6 class="text-uppercase text-primary fw-semibold">Play has no limits</h6>
+                        <h2 class="fs-1">Ecco la PlayStation 5</h2>
+                        <p class="text-secondary pt-2">Tuffati in nuove possibilità di gioco completamente inaspettate
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
