--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             </div>
         </section>
         <section style="min-height: 800px;">
+            <!-- Console and accessories section -->
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -190,6 +191,44 @@
                         <h2 class="fs-1">Ecco la PlayStation 5</h2>
                         <p class="text-secondary pt-2">Tuffati in nuove possibilità di gioco completamente inaspettate
                         </p>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <!-- responsive columns -->
+                    <div class="col-12 col-md-5">
+                        <div class="pt-5">
+                            <h2 class="fs-1">Console PlayStation 5</h2>
+                            <p class="text-secondary pt-2">Sperimenta la nuova generazione di incredibili giochi
+                                PlayStation.
+                            </p>
+                            <button type="button" class="btn btn-primary rounded-pill">Maggiori informazioni</button>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-7">
+                        <img class="w-100 img-fluid" src="img/playstation-5-thumb.png" alt="ps5">
+                    </div>
+                </div>
+                <div class="row py-4" id="pics-button">
+                    <!-- pics button -->
+                    <div class="col-4 col-md px-3 text-center">
+                        <img class="img-fluid" src="img/playstation-5-thumb.png" alt="ps5">
+                        <p class="d-none d-md-block pt-2 fw-semibold">Console PS5</p>
+                    </div>
+                    <div class="col-4 col-md px-3 text-center">
+                        <img class="img-fluid" src="img/joypad-thumb.png" alt="ps5 controller">
+                        <p class="d-none d-md-block pt-2 fw-semibold">Controller wireless DualSense</p>
+                    </div>
+                    <div class="col-4 col-md px-3 text-center">
+                        <img class="img-fluid" src="img/headset-thumb.png" alt="ps5 headset">
+                        <p class="d-none d-md-block pt-2 fw-semibold">Cuffie wireless con microfono PULSE 3</p>
+                    </div>
+                    <div class="col-4 col-md px-3 text-center">
+                        <img class="img-fluid" src="img/remote-thumb.png" alt="ps5 remote">
+                        <p class="d-none d-md-block pt-2 fw-semibold">Telecomando Media</p>
+                    </div>
+                    <div class="col-4 col-md px-3 text-center">
+                        <img class="img-fluid" src="img/camera-thumb.jpg" alt="ps5 camera">
+                        <p class="d-none d-md-block pt-2 fw-semibold">Telecamera HD</p>
                     </div>
                 </div>
             </div>
