--- a/index.html
+++ b/index.html
@@ -233,7 +233,23 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section id="it-takes-two">
+            <div class="container text-light">
+                <div class="row">
+                    <div class="col-12 col-lg-5">
+                        <img class="img-fluid w-50 py-5" src="img/it-takes-two-logo.png" alt="it takes two logo">
+                        <h2 class="pb-3 fw-bold">Un'avventura cooperativa selvaggia ti attende</h2>
+                        <p class="fw-semibold">
+                            Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes
+                            Two,
+                            un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
+                        </p>
+                        <button type="button" class="btn nc-orange-btn text-light rounded-pill mb-4">Acquista
+                            ora</button>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
